EA Filterable Gallery | Column Number issue on Firefox

--- a/assets/front-end/sass/filter-gallery/index.scss
+++ b/assets/front-end/sass/filter-gallery/index.scss
@@ -602,7 +602,7 @@ a.eael-gallery-load-more, a.eael-gallery-load-more:hover {
 		margin-right: -6px;
 	}
 	.elementor-element.elementor-grid-6 .eael-filterable-gallery-item-wrap {
-		width: 16.6667%;
+		width: 16%;
 		float: left;
 	}
 	.elementor-element.elementor-grid-6 .eael-filterable-gallery-item-wrap:nth-of-type(6n) {
@@ -681,7 +681,7 @@ a.eael-gallery-load-more, a.eael-gallery-load-more:hover {
 		margin-right: -6px;
 	}
 	.elementor-element.elementor-grid-tablet-6 .eael-filterable-gallery-item-wrap {
-		width: 16.6667%;
+		width: 16%;
 		float: left;
 	}
 	.elementor-element.elementor-grid-tablet-6 .eael-filterable-gallery-item-wrap:nth-of-type(6n) {
@@ -759,7 +759,7 @@ a.eael-gallery-load-more, a.eael-gallery-load-more:hover {
 		margin-right: -6px;
 	}
 	.elementor-element.elementor-grid-mobile-6 .eael-filterable-gallery-item-wrap {
-		width: 16.6667%;
+		width: 16%;
 		float: left;
 	}
 	.elementor-element.elementor-grid-mobile-6 .eael-filterable-gallery-item-wrap:nth-of-type(6n) {
